Added lasagna.jpg and added to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>World's Best Lasagna</h1>
+        <img src="../img/lasagna.jpeg" alt="A piece of the World's Best lasagna laid on a white plate with a fork at the back.">
+        <h2>The World's Best Lasagna ready to be gobbled!</h2>
     </body>
 </html>
