--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,28 @@
     <body>
         <h1>World's Best Lasagna</h1>
         <img src="../img/lasagna.jpeg" alt="A piece of the World's Best lasagna laid on a white plate with a fork at the back.">
-        <h2>The World's Best Lasagna ready to be gobbled!</h2>
+        <h4>The World's Best Lasagna ready to be gobbled!</h4>
+        <ul>
+            <li>1 lb sweet Italian sausage</li>
+            <li>3/4 lb lean ground beef</li>
+            <li>1/2 cup minced onion</li>
+            <li>2 cloves garlic, crushed</li>
+            <li>1 (28 oz) can crushed tomatoes</li>
+            <li>2 (6.5 oz) cans canned tomato sauce</li>
+            <li>2 (6 oz) cans tomato paste</li>
+            <li>1/2 cup water</li>
+            <li>2 tblsp white sugar</li>
+            <li>4 tblsp chopped fresh parsley, divided</li>
+            <li>1 1/2 tsp dried basil leaves</li>
+            <li>1 1/2 tsp salt, divided, or to taste</li>
+            <li>1 tsp Italian seasoning</li>
+            <li>1/2 tsp fennel seeds</li>
+            <li>1/4 tsp ground black pepper</li>
+            <li>12 lasagna noodles</li>
+            <li>16 oz ricotta cheese</li>
+            <li>1 egg</li>
+            <li>3/4 lb mozarella cheese, sliced</li>
+            <li>3/4 cup grated Parmesan cheese</li>
+        </ul>
     </body>
 </html>
