--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,7 @@
         <h1>World's Best Lasagna</h1>
         <img src="../img/lasagna.jpeg" alt="A piece of the World's Best lasagna laid on a white plate with a fork at the back.">
         <h4>The World's Best Lasagna ready to be gobbled!</h4>
+        <h2>Ingredients</h2>
         <ul>
             <li>1 lb sweet Italian sausage</li>
             <li>3/4 lb lean ground beef</li>
@@ -30,5 +31,41 @@
             <li>3/4 lb mozarella cheese, sliced</li>
             <li>3/4 cup grated Parmesan cheese</li>
         </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>
+                <p>
+                    Cook sausage, ground beef, onion, and garlic in a Dutch over medium heat
+                    until well browned. Stir in crushed tomatoes, tomato sauce, tomato paste, and water.
+                    Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, 
+                    fennel seeds, and pepper. Simmer, covered, for about 1 1/2 hours, stirring occasionally.
+                </p>
+            </li>
+            <li>
+                <p>
+                    Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water
+                    for 8 to 10 minutes. Drain noodles, and rinse with cold water. In a mixing bowl, combine ricotta
+                    cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.
+                </p>
+            </li>
+            <li>Preheat the ovent to 375 degrees F (190 degreesC).</li>
+            <li>
+                <p>
+                    To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch
+                    baking dish. Arrange 6 noodles lengthwise over meat sauce. Spread with 1/2
+                    of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices.
+                    Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup of Parmesan
+                    cheese. Repeat layers, and top with remaining mozzarella and Parmesan cheese.
+                    Cover with foil: to prevent sticking, either spray foil with cooking spray
+                    or make sure the foil does not touch the cheese.
+                </p>
+            </li>
+            <li>
+                <p>
+                    Bake in the preheated oven for 25 minutes. Remove the foil and bake for an
+                    additional 25 minutes. oRest lasagna for 15 minutes before serving.
+                </p>
+            </li>
+        </ol>
     </body>
 </html>
