Add site map to all existing pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">World's Best Lasagna</a>
+        <h3>Site Map</h3>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>Recipes</li>
+            <ul>
+                <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+                <li><a href="./recipes/fettuccine.html">To Die for Fettuccine Alfredo</a></li>
+                <li><a href="./recipes/cookieDough.html">Edible Cookie Dough</a></li>
+            </ul>
+        </ul>
     </body>
 </html>
