--- a/recipes/cookieDough.html
+++ b/recipes/cookieDough.html
@@ -6,6 +6,16 @@
     </head>
     <body>
         <h1>Edible Cookie Dough</h1>
+        <h3>Site Map</h3>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li>Recipes</li>
+            <ul>
+                <li><a href="./lasagna.html">World's Best Lasagna</a></li>
+                <li><a href="./fettuccine.html">To Die for Fettuccine Alfredo</a></li>
+                <li><a href="./cookieDough.html">Edible Cookie Dough</a></li>
+            </ul>
+        </ul>
         <a href="../index.html">Home Page</a>
         <a href="https://www.allrecipes.com/recipe/255365/edible-cookie-dough/">Link to original recipe</a>
     </body>
