--- a/recipes/fettuccine.html
+++ b/recipes/fettuccine.html
@@ -6,7 +6,16 @@
     </head>
     <body>
         <h1>To Die For Futtuccine Alfredo</h1>
-        <a href="../index.html">Home Page</a>
+        <h3>Site Map</h3>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li>Recipes</li>
+            <ul>
+                <li><a href="./lasagna.html">World's Best Lasagna</a></li>
+                <li><a href="./fettuccine.html">To Die for Fettuccine Alfredo</a></li>
+                <li><a href="./cookieDough.html">Edible Cookie Dough</a></li>
+            </ul>
+        </ul>
         <a href="https://www.allrecipes.com/recipe/23431/to-die-for-fettuccine-alfredo/">Link to original recipe</a>
     </body>
 </html>
