--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,16 @@
     </head>
     <body>
         <h1>World's Best Lasagna</h1>
+        <h3>Site Map</h3>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li>Recipes</li>
+            <ul>
+                <li><a href="./lasagna.html">World's Best Lasagna</a></li>
+                <li><a href="./fettuccine.html">To Die for Fettuccine Alfredo</a></li>
+                <li><a href="./cookieDough.html">Edible Cookie Dough</a></li>
+            </ul>
+        </ul>
         <img src="../img/lasagna.jpeg" alt="A piece of the World's Best lasagna laid on a white plate with a fork at the back.">
         <h4>The World's Best Lasagna ready to be gobbled!</h4>
         <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">Recipe taken from this AllRecipes page.</a>
