--- a/recipes/cookieDough.html
+++ b/recipes/cookieDough.html
@@ -16,7 +16,30 @@
                 <li><a href="./cookieDough.html">Edible Cookie Dough</a></li>
             </ul>
         </ul>
-        <a href="../index.html">Home Page</a>
+        <p><img src="../img/cookieDough.jpeg"></p>
         <a href="https://www.allrecipes.com/recipe/255365/edible-cookie-dough/">Link to original recipe</a>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 cup all-purpose flour</li>
+            <li>3/4 cup packed brown sugar</li>
+            <li>1/2 cup butter</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1/2 teaspoon salt</li>
+            <li>2 tbsp milk</li>
+            <li>1/2 cup milk chocolate chips</li>
+            <li>1/2 cup mini chocolate chips</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>
+                To heat-teat your flour so it is safe to use: Place flour in a 
+                microwave-safe dish and cook for 1 minute and 15 seconds, stirring it every 15 seconds. Set aside.
+            </li>
+            <li>
+                Beat sugar and butter with an electric mixer in a large bowl until craemy. Beat in vanilla extract 
+                and salt. Add heat-treated flour; mix until a crumbly dough forms. Stir in milk until dough is just
+                combined; fold in milk chocolate chips and mini chocolate chips.
+            </li>
+        </ol>
     </body>
 </html>
