--- a/recipes/fettuccine.html
+++ b/recipes/fettuccine.html
@@ -16,6 +16,32 @@
                 <li><a href="./cookieDough.html">Edible Cookie Dough</a></li>
             </ul>
         </ul>
+        <p><img src="../img/fettuccine.jpeg" width="525"></p>
         <a href="https://www.allrecipes.com/recipe/23431/to-die-for-fettuccine-alfredo/">Link to original recipe</a>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>24 oz dry fettuccine pasta</li>
+            <li>1 cup butter</li>
+            <li>3/4 pint heavy cream</li>
+            <li>salt and pepper to taste</li>
+            <li>1 dash garlic salt</li>
+            <li>3/4 cup grated Romano cheese</li>
+            <li>1/2 cup grated Parmesan cheese</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>
+                Bring a large pot of lightly salted water to boil. Add fettuccine and cook 
+                for 8 to 10 minutes or until al dente; drain.
+            </li>
+            <li>
+                Melt butter into cream in a large saucepan over low heat; add salt, pepper, 
+                and garlic salt. Increae the heat to medium; stir in grated Romano and Parmesan
+                cheese until melted and sauce has thickened.
+            </li>
+            <li>
+                Add cooked past to sauce and toss until thoroughly coated; serve immediately.
+            </li>
+        </ol>
     </body>
 </html>
